--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ main {
     font-size: 22px;
 }
 
-.button {
+button {
     background-color: rgba(50, 150, 220, 1);
     border: 0;
     text-align: center;
@@ -16,10 +16,10 @@ main {
     box-shadow: inset 5px rgba(15, 120, 156, 0.5);
 }
 
-.button:hover {
+button:hover {
     background-color: rgba(60, 170, 230, 1);
 }
 
-.button:active {
+button:active {
     inset: -3px -2px -2px -4px rgba(15, 120, 156, 0.5);
 }
