--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: darkkhaki;
+    font-family: fantasy;
+    text-align: center;
 }
 
 main {
@@ -15,6 +17,7 @@ button {
     color: aliceblue;
     border-radius: 10px;
     box-shadow: inset 5px rgba(15, 120, 156, 0.5);
+    padding: 4rem;
 }
 
 button:hover {
@@ -23,4 +26,9 @@ button:hover {
 
 button:active {
     inset: -3px -2px -2px -4px rgba(15, 120, 156, 0.5);
+}
+
+h1 {
+    text-decoration: underline;
+    font-size: 1.2rem;
 }
