--- a/style.css
+++ b/style.css
@@ -32,3 +32,12 @@ h1 {
     text-decoration: underline;
     font-size: 2.2rem;
 }
+
+#displayWord {
+    background-color: turquoise;
+    color: whitesmoke;
+    padding: 2rem;
+    margin: auto;
+    height: 20px;
+    font-size: 2rem;
+}
