--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-    background-color: darkkhaki;
+    background-color: black;
     font-family: fantasy;
     text-align: center;
 }
 
 main {
-    background-color:darkseagreen;
+    background-color:aquamarine;
     font-size: 22px;
     background-position: center;
 }
@@ -17,7 +17,7 @@ button {
     color: aliceblue;
     border-radius: 10px;
     box-shadow: inset 5px rgba(15, 120, 156, 0.5);
-    padding: 4rem;
+    padding: 2.3rem;
 }
 
 button:hover {
