--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
     background-color: black;
-    font-family: cursive;
-    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: auto;
 }
 
 main {
-    background-color:rgb(113, 209, 177);
-    font-size: 22px;
-    background-position: center;
+    background-color:rgb(rgb(226, 238, 61), green, blue);
+    font-size:1.6rem;
+    padding: 15rem;
+    margin: 50px;
+    text-align: center;
 }
 
 button {
@@ -26,10 +28,6 @@ button:hover {
 
 button:active {
     inset: -3px -2px -2px -4px rgba(15, 120, 156, 0.5);
-}
-
-h1 {
-    font-size: 2.2rem;
 }
 
 #displayWord {
