--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 main {
-    background-color:rgb(rgb(226, 238, 61), green, blue);
-    font-size:1.6rem;
+    background-color:tan;
+    font-size:1.2rem;
     padding: 15rem;
     margin: 50px;
     text-align: center;
@@ -19,7 +19,9 @@ button {
     color: aliceblue;
     border-radius: 10px;
     box-shadow: inset 5px rgba(15, 120, 156, 0.5);
-    padding: 2.3rem;
+    padding: 2rem;
+    font-size: 1.4rem;
+    margin: 50px;
 }
 
 button:hover {
@@ -33,9 +35,10 @@ button:active {
 #displayWord {
     background-color: turquoise;
     color: whitesmoke;
-    padding: 2rem;
-    margin: auto;
-    height: 10px;
-    font-size: 2rem;
+    padding: 3rem;
+    margin: 15px;
+    height: 50px;
+    font-size: 1.6rem;
     text-decoration: underline;
+    border: 1px solid;
 }
