--- a/style.css
+++ b/style.css
@@ -40,5 +40,13 @@ button:active {
     height: 50px;
     font-size: 1.6rem;
     text-decoration: underline;
-    border: 1px solid;
+    border: 5px solid;
+}
+
+@media only screen and (max-width: 400px) {
+    body {
+        display: flex;
+        flex-direction: row;
+        word-wrap: break-word;
+    }
 }
